== Changelog

=== 3.0 (Planned to xx.12.2015)
* Refactor AbstractSelenideElement. Instead of single huge class, it's split to many small classes ("commands").
* User can override any of these commands
* User can add any custom commands to the standard Selenide methods

=== 2.25 (Released 30.11.2015)
* Changed license from LGPL 3.0 to MIT (less restrictive)
* #250 add TextReport (ex. PrettyReportCreator) for TestNG
* #227 add method $$.first() and $$.last()
* #242 #226 add method Screenshots.getLastScreenshot()
* #226 rename method getScreenShotAsFile() to takeScreenShotAsFile() because it actually takes screenshot
* #246 add method Selenide.confirm() without text parameter. Sometimes you want to just confirm without verifying text.
* #232 methods `confirm()` and `dismiss()` return actual dialog text
* #244 add ability to skip re-spawning browser after it disappears/closes unexpectedly (added property `-Dselenide.reopenBrowserOnFail=false`)
* upgrade to htmlunit 2.19
 
=== 2.24 (Released 08.11.2015)
* add method $.pressEscape()
* extract code for creating WebDriver to a separate class WebDriverFactory
* #236 fix soft asserts with TestNG
* upgrade to selenium 2.48.2

=== 2.23 (Released 15.09.2015)
* add method `$.selectRadio()`
* Method `$.setValue()` can also select radio button
* #216 user cannot change value of readonly field (input, radio, checkbox, textarea)
* #215 Take into account element's "maxlength" attr for the JS value setter

=== 2.22 (Released 29.08.2015)
* #209 close browser in the same thread (without spawning a daemon thread)

=== 2.21 (Released 03.08.2015)
* Selenide now requires Java 7 or higher
* Upgrade to Selenium 2.47.1 <br>
 Release notes: https://github.com/SeleniumHQ/selenium/blob/master/java/CHANGELOG

=== 2.20 (Released to 27.07.2015)
* #195 replace System.out and System.err by java.util.logging
* #199 Use timeout (5 seconds by default) when closing/killing webdriver [by @admizh]